@startuml
hide circle
skinparam classAttributeIconSize 0

package "seedu.duke" {
    class FinancialGoal {
        - double deposits
        - String currentGoal
        - double targetAmount
        - String description
        - Currency currency
        - boolean isAchieved
        - boolean isBlank
        - double expenses

        + FinancialGoal()
        + FinancialGoal(String, double, String)
        + FinancialGoal(String, double, String, Currency)

        + boolean isAchieved()
        + boolean isBlank()
        + String getDescription()
        + double getTargetAmount()
        + String getGoal()
        + double getBalance()
        + double getDeposits()

        + void setDescription(String)
        + void setTargetAmount(double)
        + void setGoal(String)

        + void addToSavings(double)
        + void subFromSavings(double)
        + void checkGoalStatus()
        + void updateExpenses(TransactionManager)
        + void createNewGoal(Ui)

        + void forceSetDeposits(double)
        + void forceSetAchieved(boolean)
        + String toString()
    }

    class "transactions:TransactionManager" {
        + getTotalAmount()
    }
    class "ui:Ui" {
        + <u>subFromSavings(double, double)
        + <u>printGoalStatus(double, double)
        + <u>createGoalConfirm()
        + <u>createGoalAborted()
        + <u>createGoalName()
        + <u>createGoalTarget()
        + <u>createGoalDescription()
        + <u>createGoalSuccess()
        + showError(String)
    }

    enum "<<enumeration>>\nCurrency" {
        CNY
        EUR
        GBP
        JPY
        SGD
        USD
    }

    FinancialGoal "1" --> "1" "<<enumeration>>\nCurrency" : uses
    FinancialGoal --> "transactions:TransactionManager"
    FinancialGoal --> "ui:Ui"
}
@enduml
